# finance-ml-lab

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  render.yaml  requirements-dl.txt  requirements.txt
api/: main.py
data/: sp500_meta.csv
experiments/: backtest_pairs.py  build_snapshot.py  fetch_sp500.py  improve_rank_accuracy.py  improve_vol_accuracy.py  run_all.py  run_cross_sectional.py  run_deep_learning.py  run_improvements.py  run_volatility_advanced.py  train_models.py
models/: direction.joblib  ranker.joblib
reports/: _rank_accuracy.csv  _rank_conviction.csv  _vol_accuracy.csv  accuracy.md  cross_sectional.md  deep_learning.md  findings.md  improvements.md  pairs_backtest.md  volatility_advanced.md
src/: data.py  features.py  panel.py  predict.py  universe.py  utils.py
src/tasks/: cross_sectional.py  direction.py  direction_calibrated.py  portfolio.py  returns.py  volatility.py  volatility_advanced.py
web/: app.js  index.html  style.css
web/data/: equity.json  snapshot.json
