# Project metadata and tooling configuration.
# Runtime installs use the pinned requirements*.txt; the dependency lists here
# are the abstract (minimum-version) equivalents.

[project]
name = "finance-ml-lab"
version = "1.1.0"
description = "An honest machine-learning lab benchmarking ML against classical baselines on US equities."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Evan Teong", email = "teong882@gmail.com" }]
keywords = [
    "machine-learning",
    "quantitative-finance",
    "time-series",
    "volatility-forecasting",
    "backtesting",
    "fastapi",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "arch>=8.0",
    "fastapi>=0.138",
    "joblib>=1.5",
    "lxml>=6.1",
    "matplotlib>=3.10",
    "numpy>=2.0",
    "pandas>=2.2",
    "pydantic>=2.10",
    "requests>=2.32",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "uvicorn>=0.30",
    "yfinance>=0.2",
]

[project.optional-dependencies]
# Deep-learning experiments (LSTM / Transformer). See requirements-dl.txt.
dl = ["torch>=2.2"]

[project.urls]
Repository = "https://github.com/evantjk/finance-ml-lab"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
